site/src/scaffold/index.scss
@import '@microsoft/atlas-css/src/index.scss';
@import './styles/form.scss';
@import './styles/height.scss';
@import './styles/layout.scss';
@import './styles/overflow.scss';
@import './styles/code-block.scss';
@import './styles/burger.scss';
@import './styles/layout-buttons.scss';
@import './styles/direction-change.scss';
@import './styles/orbit.scss';

// hack to mark markdown logo on '/' look a tad different, excludes header logo
main img[src^='/atlas-light.'] {
	width: 64px;
	height: auto;
	margin-bottom: 18px;
}

// add temporary layout-menu-collapsed classes for site functionality, might bring this into the css package if it is useful

.layout.layout-menu-collapsed.layout-holy-grail .hide-on-menu-collapsed,
.layout.layout-menu-collapsed.layout-sidecar-left .hide-on-menu-collapsed {
	display: none !important;
}

.layout.layout-holy-grail:not(.layout-menu-collapsed) .show-on-menu-collapsed,
.layout.layout-sidecar-left:not(.layout-menu-collapsed) .show-on-menu-collapsed {
	display: none !important;
}

